<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimaryDark">

    <!--Adjust volume by making calls to <scope>_seekbar progress listeners-->
    <TextView android:id="@+id/setting_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/title_bottom"
        android:layout_marginTop="@dimen/title_top"
        android:text="@string/settings_title"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="@dimen/title_font"
        android:theme="@style/Animation.AppCompat.Dialog"/>

    <TextView android:id="@+id/volume_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/subtitle_padding"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/subtitle_font"
        android:text="@string/volume_title"

        android:shadowColor="@android:color/black"
        android:shadowRadius="1.5"
        android:shadowDx="1"
        android:shadowDy="1"/>

    <TextView android:id="@+id/sfx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/element_margin_top"
        android:layout_marginStart="@dimen/element_margin_start"
        android:textSize="@dimen/property_font"
        android:textColor="@color/colorPrimary"
        android:text="@string/sfx_title"/>

    <SeekBar android:id="@+id/sfx_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/element_margin_top"
        android:theme="@style/Base.Widget.AppCompat.SeekBar"/>

    <TextView android:id="@+id/music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/element_margin_top"
        android:layout_marginStart="@dimen/element_margin_start"
        android:textSize="@dimen/property_font"
        android:textColor="@color/colorPrimary"
        android:text="@string/music_title"/>

    <SeekBar android:id="@+id/music_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/element_margin_top"
        android:theme="@style/Base.Widget.AppCompat.SeekBar"/>

    <TextView android:id="@+id/master"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/element_margin_top"
        android:layout_marginStart="@dimen/element_margin_start"
        android:textSize="@dimen/property_font"
        android:textColor="@color/colorPrimary"
        android:text="@string/master_title"/>

    <SeekBar android:id="@+id/master_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/element_margin_top"
        android:theme="@style/Base.Widget.AppCompat.SeekBar"/>

    <TextView android:id="@+id/misc_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/subtitle_margin_top"
        android:padding="@dimen/subtitle_padding"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/misc_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/subtitle_font"

        android:shadowColor="@android:color/black"
        android:shadowRadius="1.5"
        android:shadowDx="1"
        android:shadowDy="1"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/element_margin_top"
        android:layout_marginStart="@dimen/element_margin_start"
        android:layout_marginEnd="@dimen/element_margin_end"
        android:background="@color/colorPrimaryDark">

        <TextView android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/element_margin_end"
            android:textSize="@dimen/value_font"
            android:text="@string/about_hypertext"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView android:id="@+id/credits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/element_margin_start"
            android:textSize="@dimen/value_font"
            android:text="@string/credits_hypertext"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/gotoStats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="stats"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/gotoModes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="modes"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>